--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-datepicker": "^8.7.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "date-fns": "^2.30.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
