--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,5 @@ services:
       - "5173:5173"
     volumes:
       - ./data:/app/data
+    environment:
+      - DEFAULT_LANGUAGE=en # change to 'es' for Spanish by default
