--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "docker:build": "docker build -t balance-forecast .",
-    "docker:run": "docker run -p 3600:3600 -v ./data:/app/data balance-forecast"
+    "docker:run": "docker run -p 3600:3600 -v ./data:/app/data balance-forecast",
+    "preview:cf": "npm run build && wrangler pages dev dist"
   },
   "keywords": [
     "budget",
@@ -25,11 +26,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
-    "react": "^18.2.0",
-    "react-datepicker": "^8.7.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0"
+    "hono": "^4.10.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -38,7 +35,13 @@
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "postcss": "^8.4.32",
+    "react": "^18.2.0",
+    "react-datepicker": "^8.7.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "wrangler": "^4.50.0"
   }
 }
