--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -173,7 +173,7 @@ jobs:
           cache: "npm"
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build Frontend
         run: npm run build
