feat: demo mode

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -19,6 +19,11 @@
     }
   ],
 
+  // Environment variables
+  "vars": {
+    "DEMO": "false"
+  },
+
   "observability": {
     "enabled": false
   }
