--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
-    "hono": "^4.10.6"
+    "hono": "^4.10.6",
+    "nanoid": "^5.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
