--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,12 @@ node_modules/
 
 # Production
 dist/
-build/
 
 # Database
-data/*.json
-!data/.gitkeep
+/data
 
 # Environment
 .env
-.env.local
 
 # Logs
 logs
@@ -20,13 +17,6 @@ npm-debug.log*
 
 # IDE
 .vscode/
-.idea/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
 
 # Wrangler
 .wrangler
