--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -74,7 +74,7 @@ jobs:
   test:
     name: Test Docker Image
     runs-on: ubuntu-22.04
-    needs: Build_Image
+    needs: [build]
 
     steps:
       - name: Checkout Project
