--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -29,11 +29,23 @@
 
   // Environment variables
   "vars": {
-    "DEMO": "false",
+    "DEMO": "true",
   },
 
   // Observability settings
   "observability": {
     "enabled": false,
+    "head_sampling_rate": 1,
+    "logs": {
+      "enabled": true,
+      "head_sampling_rate": 1,
+      "persist": true,
+      "invocation_logs": true,
+    },
+    "traces": {
+      "enabled": false,
+      "persist": true,
+      "head_sampling_rate": 1,
+    },
   },
 }
